Added extra plugins for REST.

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,6 +2,6 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 
-getLatestPiValue:
-    path: /pi
-    controller: App\Controller\PiController::getLatestPiValue
+# getLatestPiValue:
+#     path: /pi
+#     controller: App\Controller\PiController::getLatestPiValue
