--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/orm": "^2.7",
         "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.7",
+        "nelmio/cors-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
