--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=54de139a35c5b1e7e1956a4237a27f3b
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=postgresql://homestead:secret@127.0.0.1:5432/postgres?serverVersion=11&charset=utf8
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
