--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.20"
     },
     "config": {
         "optimize-autoloader": true,
